<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Navigate up</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_archive">Archive</string>
    <string name="action_call">Make a call</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_message">Delete</string>
    <string name="action_download">Download</string>
    <string name="action_help_and_feedback">Help &amp; feedback</string>
    <string name="action_info_and_options">Info &amp; options</string>
    <string name="action_menu_mark_all_as_read">Mark all as read</string>
    <string name="action_menu_show_archived">Archived</string>
    <string name="action_people_and_options">People &amp; options</string>
    <string name="action_scan_qr_code">Messages for web</string>
    <string name="action_search">Search</string>
    <string name="action_search_messages">Search messages</string>
    <string name="action_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_upgrade">Upgrade</string>
    <string name="action_video_call">Make a video call</string>
    <string name="advanced_pref_key">advanced_prefs</string>
    <string name="advanced_settings">Advanced</string>
    <string name="auto_retrieve_mms_pref_key">buglesub_auto_retrieve_mms</string>
    <string name="auto_retrieve_mms_pref_title">Auto-download MMS</string>
    <string name="auto_retrieve_mms_when_roaming_pref_key">buglesub_auto_retrieve_mms_when_roaming</string>
    <string name="auto_retrieve_mms_when_roaming_pref_title">Auto-download MMS when roaming</string>
    <string name="blocked_contacts_title">Blocked contacts</string>
    <string name="notifications_enabled_pref_key">notifications_enabled</string>
    <string name="notification_vibration_pref_key">notification_vibration</string>
    <string name="current_country_pref_key">current_country</string>
    <string name="current_country_pref_title">Your current country</string>
    <string name="debug_category_pref_title">Debug</string>
    <string name="debug_pref_key">debug_category</string>
    <string name="delivery_reports_pref_key">buglesub_delivery_reports</string>
    <string name="delivery_reports_pref_summary">Find out when an SMS message is delivered</string>
    <string name="delivery_reports_pref_title">Get SMS delivery reports</string>
    <string name="dogfood_opt_in_dialog_title">Join Dogfood</string>
    <string name="dump_mms_pref_key">dump_mms</string>
    <string name="dump_mms_pref_summary">Dump received MMS raw data into external storage file</string>
    <string name="dump_mms_pref_title">Dump MMS</string>
    <string name="dump_sms_pref_key">dump_sms</string>
    <string name="dump_sms_pref_summary">Dump received SMS raw data into external storage file</string>
    <string name="dump_sms_pref_title">Dump SMS</string>
    <string name="enable_rcs_fallback_to_xms_title">Resend messages if undelivered</string>
    <string name="enable_rcs_pref_key">enable_rcs</string>
    <string name="enable_rcs_summary_off">Use Wi-Fi or data for messaging when available</string>
    <string name="enable_rcs_title">Enable chat features</string>
    <string name="group_mms_pref_key">buglesub_group_messaging</string>
    <string name="group_mms_pref_title">Group messaging</string>
    <string name="link_preview_enabled_pref_key">link_preview_enabled</string>
    <string name="link_preview_enabled_pref_summary">Show previews in messages</string>
    <string name="link_preview_wifi_only_pref_key">link_preview_wifi_only</string>
    <string name="link_preview_wifi_only_pref_summary">Only download previews on Wi-Fi</string>
    <string name="message_context_menu_copy_text">Copy text</string>
    <string name="message_context_menu_forward_message">Forward</string>
    <string name="message_context_menu_view_details">View details</string>
    <string name="mms_phone_number_pref_key">buglesub_mms_phone_number</string>
    <string name="mms_phone_number_pref_title">Phone number</string>
    <string name="notification_sound_pref_key">notification_sound</string>
    <string name="notification_sound_pref_title">Notification sound</string>
    <string name="notification_vibrate_pref_title">Vibrate</string>
    <string name="notifications_enabled_pref_title">Notifications</string>
    <string name="p2p_conversation_suggestions_enabled_pref_summary">Show suggestions when available</string>
    <string name="p2p_conversation_suggestions_preference_title">Smart Reply</string>
    <string name="p2p_conversation_suggestions_settings_screen_launcher_pref">p2p_conversation_suggestions_parent</string>
    <string name="rbm_verification_icon_content_description">Verified by Google</string>
    <string name="rcs_acs_url_override_key">buglesub_acs_url_override</string>
    <string name="rcs_acs_url_override_summary">Manually override the ACS URL</string>
    <string name="rcs_acs_url_override_title">Set ACS URL</string>
    <string name="rcs_availability">RCS Availability</string>
    <string name="rcs_availability_key">buglesub_rcs_availability</string>
    <string name="rcs_default_sharing_method_key">rcs_default_sharing_method</string>
    <string name="rcs_default_sharing_method_title">Backup format for sending attachments</string>
    <string name="rcs_fallback_type_pref_key">rcs_fallback_type</string>
    <string name="rcs_learn_more_pref_key">rcs_learn_more</string>
    <string name="rcs_learn_more_title">%1$s about chat features right now</string>
    <string name="rcs_mobile_data_auto_download_limit_default_entry">0</string>
    <string name="rcs_mobile_data_auto_download_limit_pref_key">rcs_mobile_data_auto_download_limit</string>
    <string name="rcs_overrides_category_pref_title">Overrides (permission required)</string>
    <string name="rcs_pref_key">rcs_prefs</string>
    <string name="rcs_provisioning_flow_default_value">0</string>
    <string name="rcs_provisioning_flow_key">buglesub_provisioning_flow</string>
    <string name="rcs_provisioning_flow_summary_format">%s</string>
    <string name="rcs_provisioning_flow_title">Provisioning flow</string>
    <string name="rcs_provisioning_sms_port_key">buglesub_provisioning_sms_port</string>
    <string name="rcs_provisioning_sms_port_title">Provisioning SMS port</string>
    <string name="rcs_settings">Chat features</string>
    <string name="save">Save</string>
    <string name="send_seen_report_rcs_pref_key">send_seen_report_rcs</string>
    <string name="send_seen_report_rcs_summary">"Let others know you've read their message"</string>
    <string name="send_seen_report_rcs_title">Send read receipts</string>
    <string name="send_sound_pref_key">send_sound</string>
    <string name="send_sound_pref_title">Hear outgoing message sounds</string>
    <string name="set_rcs_mobile_data_auto_download_limit_title">Auto-download files you receive over mobile data</string>
    <string name="share_typing_status_rcs_pref_key">share_typing_status_rcs</string>
    <string name="share_typing_status_rcs_summary">"Let others know when you're typing"</string>
    <string name="share_typing_status_rcs_title">Show typing indicators</string>
    <string name="sim_storage_pref_key">sim_storage_pref_key</string>
    <string name="sim_storage_pref_title">SIM card messages</string>
    <string name="sms_disabled_pref_key">sms_disabled</string>
    <string name="sms_disabled_pref_title">Default SMS app</string>
    <string name="sms_enabled_pref_key">sms_enabled</string>
    <string name="sms_enabled_pref_title">Default SMS app</string>
    <string name="sms_encoding_pref_key">buglesub_sms_encoding</string>
    <string name="sms_encoding_pref_summary">Convert special characters in your SMS messages</string>
    <string name="sms_encoding_pref_title">Use simple characters</string>
    <string name="soft_num_key_pad_backspace_content_description">Backspace</string>
    <string name="soft_num_key_pad_digit_0">0</string>
    <string name="soft_num_key_pad_digit_1">1</string>
    <string name="soft_num_key_pad_digit_2">2</string>
    <string name="soft_num_key_pad_digit_3">3</string>
    <string name="soft_num_key_pad_digit_4">4</string>
    <string name="soft_num_key_pad_digit_5">5</string>
    <string name="soft_num_key_pad_digit_6">6</string>
    <string name="soft_num_key_pad_digit_7">7</string>
    <string name="soft_num_key_pad_digit_8">8</string>
    <string name="soft_num_key_pad_digit_9">9</string>
    <string name="start_new_conversation">Start new conversation</string>
    <string name="sticker_expression_angry">angry</string>
    <string name="sticker_expression_bye">bye</string>
    <string name="sticker_expression_confused">confused</string>
    <string name="sticker_expression_congratulations">congratulations</string>
    <string name="sticker_expression_eating">eating</string>
    <string name="sticker_expression_encouragement">encouragement</string>
    <string name="sticker_expression_happy">happy</string>
    <string name="sticker_expression_hate">hate</string>
    <string name="sticker_expression_laugh">laugh</string>
    <string name="sticker_expression_love">love</string>
    <string name="sticker_expression_ok">OK</string>
    <string name="sticker_expression_playful">playful</string>
    <string name="sticker_expression_sad">sad</string>
    <string name="sticker_expression_shy">shy</string>
    <string name="sticker_expression_sleepy">sleepy</string>
    <string name="sticker_expression_sorry">sorry</string>
    <string name="sticker_expression_surprised">surprised</string>
    <string name="sticker_expression_thankful">thankful</string>
    <string name="sticker_expression_vulgar">vulgar</string>
    <string name="sticker_expression_working">working</string>
    <string name="wap_push_si_pref_key">buglesub_wap_push_si</string>
    <string name="wap_push_si_pref_summary">Receive service messages</string>
    <string name="wap_push_si_pref_title">Service messages</string>
    <string name="wireless_alerts_key">buglesub_wireless_alerts_key</string>
    <string name="wireless_alerts_title">Wireless alerts</string>
</resources>