<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/rcs_settings" android:key="@string/rcs_pref_key" />
    <com.google.android.apps.messaging.ui.appsettings.MultiLinePreference android:title="@string/group_mms_pref_title" android:key="@string/group_mms_pref_key" />
    <com.google.android.apps.messaging.ui.appsettings.MultiLineSwitchPreference android:title="@string/auto_retrieve_mms_pref_title" android:key="@string/auto_retrieve_mms_pref_key" />
    <com.google.android.apps.messaging.ui.appsettings.MultiLineSwitchPreference android:title="@string/auto_retrieve_mms_when_roaming_pref_title" android:key="@string/auto_retrieve_mms_when_roaming_pref_key" android:dependency="@string/auto_retrieve_mms_pref_key" />
    <com.google.android.apps.messaging.ui.appsettings.MultiLineSwitchPreference android:title="@string/sms_encoding_pref_title" android:key="@string/sms_encoding_pref_key" android:summaryOn="@string/sms_encoding_pref_summary" />
    <com.google.android.apps.messaging.ui.appsettings.MultiLineSwitchPreference android:title="@string/delivery_reports_pref_title" android:key="@string/delivery_reports_pref_key" android:summary="@string/delivery_reports_pref_summary" />
    <com.google.android.apps.messaging.ui.appsettings.MultiLineSwitchPreference android:title="@string/wap_push_si_pref_title" android:key="@string/wap_push_si_pref_key" android:summary="@string/wap_push_si_pref_summary" />
    <com.google.android.apps.messaging.ui.appsettings.MultiLinePreference android:title="@string/wireless_alerts_title" android:key="@string/wireless_alerts_key" />
    <PreferenceScreen android:title="@string/sms_apns_title" android:key="@string/sms_apns_key" />
    <PreferenceScreen android:title="@string/sim_storage_pref_title" android:key="@string/sim_storage_pref_key" />
    <com.google.android.apps.messaging.ui.appsettings.PhoneNumberPreference android:textSize="24.0dip" android:title="@string/mms_phone_number_pref_title" android:key="@string/mms_phone_number_pref_key" />
</PreferenceScreen>