<?xml version="1.0" encoding="utf-8"?>
<sticker_set>
    <sticker id="1_angry" displayName="@string/sticker_expression_angry" staticIcon="@drawable/foodies_static_angry" animatedIcon="@drawable/foodies_animated_angry" />
    <sticker id="2_bye" displayName="@string/sticker_expression_bye" staticIcon="@drawable/foodies_static_bye" animatedIcon="@drawable/foodies_animated_bye" />
    <sticker id="3_confused" displayName="@string/sticker_expression_confused" staticIcon="@drawable/foodies_static_confused" animatedIcon="@drawable/foodies_animated_confused" />
    <sticker id="4_congratulations" displayName="@string/sticker_expression_congratulations" staticIcon="@drawable/foodies_static_congratulations" animatedIcon="@drawable/foodies_animated_congratulations" />
    <sticker id="5_eating" displayName="@string/sticker_expression_eating" staticIcon="@drawable/foodies_static_eating" />
    <sticker id="6_encouragement" displayName="@string/sticker_expression_encouragement" staticIcon="@drawable/foodies_static_encouragement" />
    <sticker id="7_happy" displayName="@string/sticker_expression_happy" staticIcon="@drawable/foodies_static_happy" />
    <sticker id="8_hate" displayName="@string/sticker_expression_hate" staticIcon="@drawable/foodies_static_hate" />
    <sticker id="9_laugh" displayName="@string/sticker_expression_laugh" staticIcon="@drawable/foodies_static_laugh" />
    <sticker id="10_love" displayName="@string/sticker_expression_love" staticIcon="@drawable/foodies_static_love" />
    <sticker id="11_OK" displayName="@string/sticker_expression_ok" staticIcon="@drawable/foodies_static_ok" />
    <sticker id="12_playful" displayName="@string/sticker_expression_playful" staticIcon="@drawable/foodies_static_playful" />
    <sticker id="13_sad" displayName="@string/sticker_expression_sad" staticIcon="@drawable/foodies_static_sad" />
    <sticker id="14_shy" displayName="@string/sticker_expression_shy" staticIcon="@drawable/foodies_static_shy" />
    <sticker id="15_sleepy" displayName="@string/sticker_expression_sleepy" staticIcon="@drawable/foodies_static_sleepy" />
    <sticker id="16_sorry" displayName="@string/sticker_expression_sorry" staticIcon="@drawable/foodies_static_sorry" />
    <sticker id="17_surprised" displayName="@string/sticker_expression_surprised" staticIcon="@drawable/foodies_static_surprised" />
    <sticker id="18_thankful" displayName="@string/sticker_expression_thankful" staticIcon="@drawable/foodies_static_thankful" />
    <sticker id="19_vulgar" displayName="@string/sticker_expression_vulgar" staticIcon="@drawable/foodies_static_vulgar" />
    <sticker id="20_working" displayName="@string/sticker_expression_working" staticIcon="@drawable/foodies_static_working" />
</sticker_set>