<?xml version="1.0" encoding="utf-8"?>
<com.google.android.apps.messaging.ui.rcs.setup.manual.SoftNumKeyPad android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" app:orientation="horizontal" app:rowCount="4" app:columnCount="3" app:alignmentMode="alignBounds"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:text="@string/soft_num_key_pad_digit_1" style="@style/SoftNumKeyPadDigit" />
    <TextView android:text="@string/soft_num_key_pad_digit_2" style="@style/SoftNumKeyPadDigit" />
    <TextView android:text="@string/soft_num_key_pad_digit_3" style="@style/SoftNumKeyPadDigit" />
    <TextView android:text="@string/soft_num_key_pad_digit_4" style="@style/SoftNumKeyPadDigit" />
    <TextView android:text="@string/soft_num_key_pad_digit_5" style="@style/SoftNumKeyPadDigit" />
    <TextView android:text="@string/soft_num_key_pad_digit_6" style="@style/SoftNumKeyPadDigit" />
    <TextView android:text="@string/soft_num_key_pad_digit_7" style="@style/SoftNumKeyPadDigit" />
    <TextView android:text="@string/soft_num_key_pad_digit_8" style="@style/SoftNumKeyPadDigit" />
    <TextView android:text="@string/soft_num_key_pad_digit_9" style="@style/SoftNumKeyPadDigit" />
    <Space android:id="@id/soft_num_key_pad_blank" style="@style/SoftNumKeyPadCell" />
    <TextView android:text="@string/soft_num_key_pad_digit_0" style="@style/SoftNumKeyPadDigit" />
    <ImageView android:id="@id/soft_num_key_pad_backspace" android:contentDescription="@string/soft_num_key_pad_backspace_content_description" style="@style/SoftNumKeyPadBackspace" />
</com.google.android.apps.messaging.ui.rcs.setup.manual.SoftNumKeyPad>