<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_add_white" android:id="@id/action_start_new_conversation" android:visible="false" android:title="@string/start_new_conversation" appcompat:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_new_releases_white" android:id="@id/action_upgrade" android:visible="false" android:title="@string/action_upgrade" appcompat:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_search_light" android:id="@id/action_search" android:title="@string/action_search_messages" appcompat:showAsAction="always|collapseActionView" appcompat:actionViewClass="com.google.android.apps.messaging.ui.BugleSearchView" />
    <item android:id="@id/action_show_archived" android:orderInCategory="200" android:title="@string/action_menu_show_archived" appcompat:showAsAction="never" />
    <item android:id="@id/action_mark_all_as_read" android:visible="false" android:orderInCategory="250" android:title="@string/action_menu_mark_all_as_read" appcompat:showAsAction="never" />
    <item android:id="@id/action_show_blocked_contacts" android:orderInCategory="300" android:title="@string/blocked_contacts_title" appcompat:showAsAction="never" />
    <item android:id="@id/action_scan_qr_code" android:orderInCategory="350" android:title="@string/action_scan_qr_code" appcompat:showAsAction="never" />
    <item android:id="@id/action_settings" android:orderInCategory="400" android:title="@string/action_settings" appcompat:showAsAction="never" />
    <item android:id="@id/action_join_dogfood" android:orderInCategory="500" android:title="@string/dogfood_opt_in_dialog_title" appcompat:showAsAction="never" />
    <item android:id="@id/action_help_and_feedback" android:orderInCategory="600" android:title="@string/action_help_and_feedback" appcompat:showAsAction="never" />
</menu>