<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <group android:id="@id/conversation_actions">
        <item android:icon="@drawable/quantum_ic_verified_user_white_24" android:id="@id/action_rbm_verification_badge" android:visible="false" android:title="@string/rbm_verification_icon_content_description" android:contentDescription="@string/rbm_verification_icon_content_description" appcompat:showAsAction="always" />
        <item android:icon="@drawable/quantum_ic_videocam_vd_theme_24" android:id="@id/action_video_call" android:visible="false" android:orderInCategory="70" android:title="@string/action_video_call" appcompat:showAsAction="ifRoom" />
        <item android:icon="@drawable/ic_phone_small_light" android:id="@id/action_call" android:orderInCategory="80" android:title="@string/action_call" appcompat:showAsAction="ifRoom" />
        <item android:icon="@drawable/ic_person_add_light" android:id="@id/action_add_contact" android:orderInCategory="90" android:title="@string/action_add_contact" appcompat:showAsAction="never" />
        <item android:id="@id/action_people_and_options" android:orderInCategory="100" android:title="@string/action_people_and_options" appcompat:showAsAction="never" />
        <item android:id="@id/action_info_and_options" android:visible="false" android:orderInCategory="105" android:title="@string/action_info_and_options" appcompat:showAsAction="never" />
        <item android:icon="@drawable/ic_search_light" android:id="@id/action_search" android:orderInCategory="110" android:title="@string/action_search" appcompat:showAsAction="collapseActionView" appcompat:actionViewClass="com.google.android.apps.messaging.ui.BugleSearchView" />
        <item android:id="@id/action_archive" android:orderInCategory="120" android:title="@string/action_archive" appcompat:showAsAction="never" />
        <item android:id="@id/action_unarchive" android:orderInCategory="130" android:title="@string/action_unarchive" appcompat:showAsAction="never" />
        <item android:id="@id/action_delete" android:orderInCategory="140" android:title="@string/action_delete" appcompat:showAsAction="never" />
        <item android:id="@id/action_help_and_feedback" android:orderInCategory="150" android:title="@string/action_help_and_feedback" appcompat:showAsAction="never" />
    </group>
</menu>