<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_share_dark" android:id="@id/share_message_menu" android:title="@string/action_share" appcompat:showAsAction="always|collapseActionView" appcompat:actionViewClass="android.view.View" />
    <item android:icon="@drawable/ic_forward_dark" android:id="@id/forward_message_menu" android:title="@string/message_context_menu_forward_message" appcompat:showAsAction="always|collapseActionView" appcompat:actionViewClass="android.view.View" />
    <item android:icon="@drawable/ic_save_dark" android:id="@id/save_attachment" android:title="@string/save" appcompat:showAsAction="always|collapseActionView" appcompat:actionViewClass="android.view.View" />
    <item android:icon="@drawable/ic_content_copy_dark" android:id="@id/copy_text" android:title="@string/message_context_menu_copy_text" appcompat:showAsAction="always|collapseActionView" appcompat:actionViewClass="android.view.View" />
    <item android:icon="@drawable/ic_info_dark" android:id="@id/details_menu" android:title="@string/message_context_menu_view_details" appcompat:showAsAction="always|collapseActionView" appcompat:actionViewClass="android.view.View" />
    <item android:icon="@drawable/ic_send_dark" android:id="@id/action_send" android:title="@string/action_send" appcompat:showAsAction="always|collapseActionView" appcompat:actionViewClass="android.view.View" />
    <item android:icon="@drawable/ic_file_download_dark" android:id="@id/action_download" android:title="@string/action_download" appcompat:showAsAction="always|collapseActionView" appcompat:actionViewClass="android.view.View" />
    <item android:icon="@drawable/ic_delete_small_dark" android:id="@id/action_delete_message" android:title="@string/action_delete_message" appcompat:showAsAction="always|collapseActionView" appcompat:actionViewClass="android.view.View" />
</menu>