<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.apps.messaging.ui.appsettings.MultiLineSwitchPreference android:persistent="true" android:title="@string/link_preview_enabled_pref_summary" android:key="@string/link_preview_enabled_pref_key" android:defaultValue="@bool/link_preview_enabled_pref_default" />
    <com.google.android.apps.messaging.ui.appsettings.MultiLineSwitchPreference android:persistent="true" android:title="@string/link_preview_wifi_only_pref_summary" android:key="@string/link_preview_wifi_only_pref_key" android:dependency="@string/link_preview_enabled_pref_key" android:defaultValue="@bool/link_preview_wifi_only_pref_default" />
</PreferenceScreen>